attempt to fix prod only bug

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet"
               media="screen and (max-width: 640px) and (min-width: 476px)"
               href="tablet-style.css" />
-        <link rel="stylesheet"
+        <!-- <link rel="stylesheet"
               media="screen and (max-width: 475px)"
-              href="mobile-style.css" />
+              href="mobile-style.css" /> -->
         <script src="script.js"></script>
     </head>
 
