--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               media="screen and (max-width: 1000px) and (min-width: 641px)"
               href="small-style.css" />
         <link rel="stylesheet"
-              media="screen and (max-width: 640px) and (min-width: 476px)"
+              media="screen and (max-width: 640px)"
               href="tablet-style.css" />
         <!-- <link rel="stylesheet"
               media="screen and (max-width: 475px)"
