--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
               media="screen and (max-width: 1000px) and (min-width: 641px)"
               href="small-style.css" />
         <link rel="stylesheet"
-              media="screen and (max-width: 640px)"
+              media="screen and (max-width: 640px) and (min-width: 476px)"
               href="tablet-style.css" />
-        <!-- <link rel="stylesheet"
+        <link rel="stylesheet"
               media="screen and (max-width: 475px)"
-              href="mobile-style.css" /> -->
+              href="mobile-style.css" />
         <script src="script.js"></script>
     </head>
 
