--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
     <body>
         <nav>
-            <div id="nav-logo">
-                Jaden Baptista
+            <div id="nav-logo-container">
+                <div id="nav-logo">
+                    Jaden Baptista
+                </div>
             </div>
             <div id="nav-buttons">
                 <button class="nav-button" id="about-button">About</button>
