--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
               href="tablet-style.css" />
         <link rel="stylesheet"
               href="mobile-style.css" />
+        <link rel="stylesheet"
+              href="smaller-style.css" />
     </head>
 
     <body>
