--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" 
-              media="screen and (max-width: 1000px) and (min-width: 641px)"
               href="small-style.css" />
         <link rel="stylesheet"
-              media="screen and (max-width: 640px) and (min-width: 476px)"
               href="tablet-style.css" />
         <link rel="stylesheet"
-              media="screen and (max-width: 475px)"
               href="mobile-style.css" />
+        <link rel="stylesheet"
+              href="smaller-style.css" />
     </head>
     <body>
         <nav>
