more mobile breakpoints for aside

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
               href="mobile-style.css" />
         <link rel="stylesheet"
               href="smaller-style.css" />
+        <link rel="stylesheet"
+              href="smallest-style.css" />
     </head>
 
     <body>
@@ -52,7 +54,6 @@
                     HELLO WORLD
                 </section>
             </div>
-            <div id="aside-separator"></div>
             <aside>
                 Lorem ipsum odor amet, consectetuer adipiscing elit. Risus mus ullamcorper et torquent vulputate. Tempus metus purus montes iaculis euismod nostra. Ac dignissim mus; urna fames sed litora. Tellus pharetra ridiculus viverra habitant luctus sociosqu himenaeos ornare. Aliquam ut mattis eleifend vivamus pulvinar pretium cursus. Ante himenaeos consectetur per quis accumsan fringilla mollis. Lacinia dapibus ex himenaeos nisi felis; velit nulla. Scelerisque auctor turpis id, volutpat hendrerit habitasse faucibus.
                 <br/><br/>
