--- a/projects.html
+++ b/projects.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" 
               href="small-style.css" />
         <link rel="stylesheet"
-              href="tablet-style.css" />
-        <link rel="stylesheet"
               href="mobile-style.css" />
         <link rel="stylesheet"
               href="smaller-style.css" />
+        <link rel="stylesheet"
+              href="smallest-style.css" />
     </head>
     <body>
         <nav>
