--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <title>Personal Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" 
-              href="small-style.css" />
+              href="styles/small-style.css" />
         <link rel="stylesheet"
-              href="mobile-style.css" />
+              href="styles/mobile-style.css" />
         <link rel="stylesheet"
-              href="smaller-style.css" />
+              href="styles/smaller-style.css" />
         <link rel="stylesheet"
-              href="smallest-style.css" />
+              href="styles/smallest-style.css" />
     </head>
 
     <body>
@@ -29,7 +29,7 @@
                         data-state="light"
                         onclick="toggleDarkMode();">
                     <img id="dark-mode-button-img" 
-                         src="weather-moon-full-svgrepo-com.svg" 
+                         src="content/weather-moon-full-svgrepo-com.svg" 
                          alt="dark mode toggle"
                          width="50px"
                          height="30px">
@@ -37,8 +37,9 @@
             </div>
             <div id="nav-break"></div>
         </nav>
+        <div id="nav-separator"></div>
         <div id="aside-grid">
-            <div id="main-content">
+            <div id="about">
                 <section>
                     HELLO WORLD
                 </section>
@@ -66,5 +67,6 @@
         </div>
     </body>
 
-    <script src="script.js"></script>
+    <script src="scripts/darkMode.js"></script>
+    <script src="scripts/navbarTransition.js"></script>
 </html>
