create resume page

--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
               href="styles/smaller-style.css" />
         <link rel="stylesheet"
               href="styles/smallest-style.css" />
+        <link rel="stylesheet" href="styles/projects.css" />
     </head>
     <body>
         <nav>
