--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
         <title>Personal Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/resume.css"/>
         <link rel="stylesheet" 
               href="styles/small-style.css" />
         <link rel="stylesheet"
@@ -38,21 +39,307 @@
         </nav>
         <div id="nav-separator"></div>
         <div id="resume">
-            <section>
-                HELLO WORLD
+            <section class="resume-container">
+                <div class="resume-header">
+                    Education
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        <!-- <span class="text-tiny">UC Berkeley</span> -->
+                        <span class="text-short text-tiny">University of California, Berkeley</span>
+                         <span class="text-long">University of California, Berkeley</span>
+                    </div>
+                    <div class="resume-item-right">
+                        Aug 2022 — Aug 2024
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        <span class="text-tiny">B.S:</span>
+                        <span class="text-short">B.S</span>
+                        <span class="text-long">Bachelor of Science</span>
+                        <span class="text-short text-long">in</span>
+                         Electrical Engineering 
+                         <span class="text-short text-tiny">&</span>
+                         <span class="text-long">and</span>
+                          Computer Science
+                    </div>
+                    <div class="resume-item-right">
+                        GPA: 3.83
+                    </div>
+                </div>
+                <br/>
+                <div class="resume-item-static">
+                    Coursework: 
+                    <a href="https://www2.eecs.berkeley.edu/Courses/EECS149/">Embedded Systems</a>,
+                    <a href="https://cs162.org/">Operating Systems</a>,
+                    <a href="https://www2.eecs.berkeley.edu/Courses/EE120/">Signals & Systems</a>,
+                    <a href="https://cs161.org/">Security</a>,
+                    <a href="https://people.eecs.berkeley.edu/~jrs/189/">Machine Learning</a>.
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        Santa Barbara City College
+                    </div>
+                    <div class="resume-item-right">
+                        May 2020 — May 2022
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        <span class="text-tiny">A.S:</span>
+                        <span class="text-short">A.S</span>
+                        <span class="text-long">Associate of Science</span>
+                        <span class="text-short text-long">in</span>
+                        Computer Science
+                        <span class="text-short text-tiny">&</span>
+                        <span class="text-long">and</span>
+                        Mathematics
+                    </div>
+                    <div class="resume-item-right">
+                        GPA: 3.76
+                    </div>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    Award: Outstanding Computer Science Student, 2022.
+                </div>
             </section>
-            <section>
-                HELLO WORLD
+            <section class="resume-container">
+                <div class="resume-header">
+                    Skills
+                </div>
+                <div class="resume-item-static">
+                    Technologies: 
+                    C/C++,
+                    Python,
+                    RISC-V,
+                    x86,
+                    FreeRTOS,
+                    ESP-IDF,
+                    Kicad,
+                    GDB,
+                    CMake,
+                    GCC.
+                </div>
+                <br/>
+                <div class="resume-item-static">
+                    Hardware: 
+                    MSP430,
+                    ESP32,
+                    UART,
+                    I2C,
+                    SPI,
+                    JTAG,
+                    Oscilloscopes,
+                    DC/AC Circuit Analysis.
+                </div>
             </section>
-            <section>
-                HELLO WORLD
+            <section class="resume-container">
+                <div class="resume-header">
+                    Experience
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        University of California, Berkeley
+                    </div>
+                    <div class="resume-item-right">
+                        Aug 2023 — Dec 2023
+                    </div>
+                </div>
+                <div class="resume-item">
+                    Academic Intern
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Guided students through course projects covering C, GDB,
+                            RISC-V assembly, CPU design in Logisim, and parallelism
+                            with OpenMP and OpenMPI during office hours in <a href="https://cs61c.org/">CS61C</a>.
+                        </li>
+                        <li>
+                            Tutored a group of 10-20 students in Python, SQL, and
+                            Scheme during lab in <a href="https://cs61a.org/">CS61A</a>.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        RRB Construction
+                    </div>
+                    <div class="resume-item-right">
+                        Mar 2021 — Jun 2022
+                    </div>
+                </div>
+                <div class="resume-item">
+                    Office Assistant
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Created <a href="https://github.com/jdbaptista/RRB-Office">software</a> in Java to automate data entry and
+                            analysis in Excel that saved tens of manhours each
+                            week while working as an office assistant and on-site
+                            in residential construction.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        Santa Barbara City College
+                    </div>
+                    <div class="resume-item-right">
+                        Jun 2021 — May 2022
+                    </div>
+                </div>
+                <div class="resume-item">
+                    Teaching Assistant
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Tutored peers in small groups of 1-5 people in Python,
+                            Java, and Data Structures & Algorithms.
+                        </li>
+                        <li>
+                            Hosted office hours to individually advise students
+                            and debug programs.
+                        </li>
+                        <li>
+                            Led midterm review sessions to solidify student
+                            understanding of course material.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        SBCC Team Programming Club
+                    </div>
+                    <div class="resume-item-right">
+                        Jan 2021 — May 2022
+                    </div>
+                </div>
+                <div class="resume-item">
+                    Club President
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Organized club competitions, mock interviews, and
+                            discussions of select topics including dynamic programming,
+                            convex hulls, graphs, and applications of hashmaps.
+                        </li>
+                        <li>
+                            Competed in the ICPC Southern California region, placing
+                            first in junior colleges both years.
+                        </li>
+                    </ul>
+                </div>
             </section>
-            <section>
-                HELLO WORLD
+            <section class="resume-container">
+                <div class="resume-header">
+                    Projects
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        <a href="https://github.com/jdbaptista/MSP-Debugger">
+                            MSP430 Disassembler
+                        </a>
+                    </div>
+                    <div class="resume-item-right">
+                        Jan 2023 — Jul 2024
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left"></div>
+                    <div class="resume-item-right">
+                        Personal Project
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li> 
+                            Created a device that displays the RISC assembly
+                            instructions in the flash memory content of MSP430
+                            microcontrollers through the use of a custom driver
+                            for the JTAG debugging interface.
+                        </li>
+                        <li> 
+                            Used register-level C programming to create a UART
+                            hardware abstraction layer.
+                        </li>
+                        <li>
+                            Overcame design challenges while writing a disassembler
+                            library to offer a convenient and efficient API for
+                            converting machine code extracted via JTAG to assembly
+                            instructions.
+                        </li>
+                        <li>
+                            Implemented interrupt service routines to debounce
+                            button input using the timer peripheral.
+                        </li>
+                        <li>
+                            Minimized MCU power draw through the use of low power modes
+                            while waiting for user input.
+                        </li>
+                        <li>
+                            Routed a PCB in Kicad to ease development and create a
+                            finished product, then soldered through-hole and surface
+                            mount components using a soldering iron, heat gun, and flux.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
+                        <a href="https://github.com/jdbaptista/MSP-Debugger">
+                            Pintos Operating System
+                        </a>
+                    </div>
+                    <div class="resume-item-right">
+                        Aug 2023 — Dec 2023
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left"></div>
+                    <div class="resume-item-right">
+                        CS162 Class Project
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Collaborated in a group of 4 students to design and
+                            implement critical features of the Pintos operating
+                            system including many system calls, scheduling,
+                            multithreading, and a filesystem.
+                        </li>
+                        <li>
+                            Researched, designed, and enabled use of the
+                            floating-point unit in multi-process systems through
+                            use of inline x86 assembly floating point state instructions.
+                        </li>
+                        <li>
+                            Led the implementation of user multithreading from design
+                            to component creation and programming of necessary changes
+                            to previously created process control system calls.
+                        </li>
+                        <li>
+                            Added support for filesystem subdirectories and designed
+                            an efficient solution for path parsing.
+                        </li>
+                    </ul>
+                </div>
             </section>
         </div>
+        <div class="footer-space"></div>
     </body>
 
     <script src="scripts/darkMode.js"></script>
     <script src="scripts/navbarTransition.js"></script>
+    <script src="scripts/cardCollapse.js"></script>
 </html>
