--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <title>Personal Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../styles/style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" 
               href="styles/small-style.css" />
         <link rel="stylesheet"
@@ -12,6 +12,7 @@
               href="styles/smaller-style.css" />
         <link rel="stylesheet"
               href="styles/smallest-style.css" />
+        <link rel="stylesheet" href="styles/blog.css" />
     </head>
     <body>
         <nav>
