--- a/resume.html
+++ b/resume.html
@@ -296,7 +296,7 @@
                 <br/>
                 <div class="resume-item">
                     <div class="resume-item-left">
-                        <a href="https://github.com/jdbaptista/MSP-Debugger">
+                        <a href="https://cs162.org/static/proj/pintos-docs/">
                             Pintos Operating System
                         </a>
                     </div>
