--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Personal Website</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/index.css" />
         <link rel="stylesheet" 
               href="styles/small-style.css" />
         <link rel="stylesheet"
@@ -40,29 +41,47 @@
         <div id="nav-separator"></div>
         <div id="aside-grid">
             <div id="about">
-                <section>
-                    HELLO WORLD
-                </section>
-                <section>
-                    HELLO WORLD
-                </section>
-                <section>
-                    HELLO WORLD
-                </section>
-                <section>
-                    HELLO WORLD
+                <section id="introduction">
+                    <div id="hello-container">
+                        <img src="content/picture.jpg" alt="face image"
+                        id="face-image"/>
+                    <div id="hello">
+                        Hello! 
+                        <br/><br/>
+                        I'm a recent EECS graduate from UC Berkeley
+                        <br/>interested in firmware
+                        development for embedded systems.
+                    </div>
+                    </div>
+                    <div id="summary">
+                        Throughout my studies I have focused on learning core concepts and 
+                        technologies including C/C++,
+                        <br/>
+                        GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
+                        <br/><br/>
+                        I have worked on many projects which demonstrate my proficiency 
+                        in developing large systems,
+                        <br/>most notably a disassembler for the 
+                        MSP430 microcontroller, the implementation of various components
+                        <br/>
+                        of the Pintos educational operating system, and an encrypted file 
+                        system.
+                        <br/><br/>
+                        I am eager to begin my career developing embedded systems and put 
+                        the skills I have developed at
+                        <br/>
+                        UC Berkeley to work on production 
+                        systems.
+                    </div>
                 </section>
             </div>
             <aside>
-                Lorem ipsum odor amet, consectetuer adipiscing elit. Risus mus ullamcorper et torquent vulputate. Tempus metus purus montes iaculis euismod nostra. Ac dignissim mus; urna fames sed litora. Tellus pharetra ridiculus viverra habitant luctus sociosqu himenaeos ornare. Aliquam ut mattis eleifend vivamus pulvinar pretium cursus. Ante himenaeos consectetur per quis accumsan fringilla mollis. Lacinia dapibus ex himenaeos nisi felis; velit nulla. Scelerisque auctor turpis id, volutpat hendrerit habitasse faucibus.
-                <br/><br/>
-                Tincidunt a nibh habitant tincidunt nec eros primis. Enim eu nostra netus penatibus tempor maecenas velit praesent. Ridiculus ut arcu laoreet iaculis leo molestie. Vehicula sodales elit mus metus efficitur praesent tristique. Feugiat libero iaculis fringilla rhoncus luctus maecenas tristique. Vehicula sollicitudin euismod justo dignissim malesuada libero.
-                <br/><br/>
-                Aliquet habitasse sollicitudin pellentesque; proin fusce velit facilisis. Placerat consectetur mollis viverra, porttitor quam consectetur lacus. Orci sagittis nascetur neque laoreet integer vitae lectus lacus. Ultrices fermentum egestas praesent vel pharetra ligula sodales purus ullamcorper. Mus ex dis mus laoreet pharetra ligula. Metus adipiscing gravida quis eu nam fringilla cras accumsan purus. Turpis tincidunt fermentum eu potenti quis eget nisi. Nascetur taciti quis leo nascetur laoreet parturient non ad justo. Dis habitasse est aenean maecenas senectus lobortis.
-                <br/><br/>
-                Luctus condimentum magnis fermentum egestas dapibus sed. Suspendisse leo nisi lectus vitae tempus amet vestibulum. Dolor felis viverra, iaculis tempus nec in venenatis. Ridiculus finibus scelerisque augue aptent phasellus id leo praesent lobortis. Rutrum quis torquent primis, tellus nibh in egestas. Hendrerit parturient mattis, mauris a nostra litora arcu. Senectus tortor pulvinar imperdiet molestie nullam. Sed maecenas vivamus odio placerat facilisis mi primis placerat pharetra.
-                <br/><br/>
-                Habitant ac cubilia placerat luctus adipiscing cras. Vestibulum lacus justo nam enim ipsum. Iaculis vehicula gravida cras nullam varius rhoncus platea proin. Auctor eu efficitur turpis gravida luctus. Non elit pellentesque etiam nunc ullamcorper sodales eu lobortis. Praesent tempus lacus habitant blandit faucibus diam tincidunt sed. Nisl platea eros non tempus in amet. Ad quis pellentesque torquent eleifend non. 
+                <div id="aside-header">
+                    Recent Blog Posts
+                </div>
+                <div class="aside-content">
+                    THIS IS A BLOG POST!!!!
+                </div>
             </aside>
         </div>
     </body>
