remove debug border

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                         Hello! 
                         <br/><br/>
                         I'm a recent EECS graduate from UC Berkeley
-                        <br/>interested in firmware
-                        development for embedded systems.
+                        <br/>interested in developing firmware for embedded systems.
                     </div>
                     </div>
                     <div id="summary">
