add social links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               href="styles/smaller-style.css" />
         <link rel="stylesheet"
               href="styles/smallest-style.css" />
-    </head>
+        </head>
 
     <body>
         <nav>
@@ -71,6 +71,16 @@
                         <br/>
                         UC Berkeley to work on production 
                         systems.
+                    </div>
+                    <div id="socials">
+                        <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
+                            <img src="content/github-mark.svg" alt="github link" class="github-img"
+                                height="40px"/>
+                        </a>
+                        <a href="https://www.linkedin.com/in/baptistajaden/" target="_blank" class="social-link">
+                            <img src="content/LI-In-Bug.png" alt="linkedin link" class="linkedin-img"
+                                height="40px"/>
+                        </a>
                     </div>
                 </section>
             </div>
