--- a/resume.html
+++ b/resume.html
@@ -45,9 +45,8 @@
                 </div>
                 <div class="resume-item">
                     <div class="resume-item-left">
-                        <!-- <span class="text-tiny">UC Berkeley</span> -->
                         <span class="text-short text-tiny">University of California, Berkeley</span>
-                         <span class="text-long">University of California, Berkeley</span>
+                        <span class="text-long">University of California, Berkeley</span>
                     </div>
                     <div class="resume-item-right">
                         Aug 2022 — Aug 2024
@@ -71,11 +70,11 @@
                 <br/>
                 <div class="resume-item-static">
                     Coursework: 
-                    <a href="https://www2.eecs.berkeley.edu/Courses/EECS149/">Embedded Systems</a>,
-                    <a href="https://cs162.org/">Operating Systems</a>,
-                    <a href="https://www2.eecs.berkeley.edu/Courses/EE120/">Signals & Systems</a>,
-                    <a href="https://cs161.org/">Security</a>,
-                    <a href="https://people.eecs.berkeley.edu/~jrs/189/">Machine Learning</a>.
+                    <a href="https://www2.eecs.berkeley.edu/Courses/EECS149/" target="_blank">Embedded Systems</a>,
+                    <a href="https://cs162.org/" target="_blank">Operating Systems</a>,
+                    <a href="https://www2.eecs.berkeley.edu/Courses/EE120/" target="_blank">Signals & Systems</a>,
+                    <a href="https://cs161.org/" target="_blank">Security</a>,
+                    <a href="https://people.eecs.berkeley.edu/~jrs/189/" target="_blank">Machine Learning</a>.
                 </div>
                 <br/>
                 <div class="resume-item">
@@ -156,11 +155,11 @@
                         <li>
                             Guided students through course projects covering C, GDB,
                             RISC-V assembly, CPU design in Logisim, and parallelism
-                            with OpenMP and OpenMPI during office hours in <a href="https://cs61c.org/">CS61C</a>.
+                            with OpenMP and OpenMPI during office hours in <a href="https://cs61c.org/" target="_blank">CS61C</a>.
                         </li>
                         <li>
                             Tutored a group of 10-20 students in Python, SQL, and
-                            Scheme during lab in <a href="https://cs61a.org/">CS61A</a>.
+                            Scheme during lab in <a href="https://cs61a.org/" target="_blank">CS61A</a>.
                         </li>
                     </ul>
                 </div>
@@ -179,7 +178,7 @@
                 <div class="resume-item">
                     <ul class="resume-list">
                         <li>
-                            Created <a href="https://github.com/jdbaptista/RRB-Office">software</a> in Java to automate data entry and
+                            Created <a href="https://github.com/jdbaptista/RRB-Office" target="_blank">software</a> in Java to automate data entry and
                             analysis in Excel that saved tens of manhours each
                             week while working as an office assistant and on-site
                             in residential construction.
@@ -246,7 +245,7 @@
                 </div>
                 <div class="resume-item">
                     <div class="resume-item-left">
-                        <a href="https://github.com/jdbaptista/MSP-Debugger">
+                        <a href="https://github.com/jdbaptista/MSP-Debugger" target="_blank">
                             MSP430 Disassembler
                         </a>
                     </div>
@@ -296,7 +295,7 @@
                 <br/>
                 <div class="resume-item">
                     <div class="resume-item-left">
-                        <a href="https://cs162.org/static/proj/pintos-docs/">
+                        <a href="https://cs162.org/static/proj/pintos-docs/" target="_blank">
                             Pintos Operating System
                         </a>
                     </div>
