fix introduction breakpoints

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                         Hello! 
                         <br/><br/>
                         I'm a recent EECS graduate from UC Berkeley
-                        <br/>interested in developing firmware for embedded systems.
+                        <br class="superficial"/>interested in developing firmware for embedded systems.
                     </div>
                     </div>
                     <div id="summary">
                         Throughout my studies I have focused on learning core concepts and 
                         technologies including C/C++,
-                        <br/>
+                        <br class="superficial"/>
                         GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
                         <br/><br/>
                         I have worked on many projects which demonstrate my proficiency 
                         in developing large systems,
-                        <br/>most notably a disassembler for the 
+                        <br class="superficial"/>most notably a disassembler for the 
                         MSP430 microcontroller, the implementation of various components
                         <br/>
                         of the Pintos educational operating system, and an encrypted file 
@@ -68,7 +68,7 @@
                         <br/><br/>
                         I am eager to begin my career developing embedded systems and put 
                         the skills I have developed at
-                        <br/>
+                        <br class="superficial"/>
                         UC Berkeley to work on production 
                         systems.
                     </div>
