move about to the center of the page

--- a/index.html
+++ b/index.html
@@ -39,50 +39,53 @@
             <div id="nav-break"></div>
         </nav>
         <div id="nav-separator"></div>
+        <div id="about">
+            <section id="introduction">
+                <div id="hello-container">
+                    <img src="content/picture.jpg" alt="face image"
+                    id="face-image"/>
+                    <div id="hello">
+                        Hello! 
+                        <br/><br/>
+                        I'm a recent EECS graduate from UC Berkeley
+                        <br class="superficial"/>interested in developing firmware for embedded systems.
+                    </div>
+                </div>
+                <div id="summary">
+                    Throughout my studies I have focused on learning core concepts and 
+                    technologies including C/C++,
+                    <br class="superficial"/>
+                    GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
+                    <br/><br/>
+                    I have worked on many projects which demonstrate my proficiency 
+                    in developing large systems,
+                    <br class="superficial"/>most notably a disassembler for the 
+                    MSP430 microcontroller, the implementation of various components
+                    <br/>
+                    of the Pintos educational operating system, and an encrypted file 
+                    system.
+                    <br/><br/>
+                    I am eager to begin my career developing embedded systems and put 
+                    the skills I have developed at
+                    <br class="superficial"/>
+                    UC Berkeley to work on production 
+                    systems.
+                </div>
+                <div id="socials">
+                    <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
+                        <img src="content/github-mark.svg" alt="github link" class="github-img"
+                            height="40px"/>
+                    </a>
+                    <a href="https://www.linkedin.com/in/baptistajaden/" target="_blank" class="social-link">
+                        <img src="content/LI-In-Bug.png" alt="linkedin link" class="linkedin-img"
+                            height="40px"/>
+                    </a>
+                </div>
+            </section>
+        </div>
         <div id="aside-grid">
-            <div id="about">
-                <section id="introduction">
-                    <div id="hello-container">
-                        <img src="content/picture.jpg" alt="face image"
-                        id="face-image"/>
-                        <div id="hello">
-                            Hello! 
-                            <br/><br/>
-                            I'm a recent EECS graduate from UC Berkeley
-                            <br class="superficial"/>interested in developing firmware for embedded systems.
-                        </div>
-                    </div>
-                    <div id="summary">
-                        Throughout my studies I have focused on learning core concepts and 
-                        technologies including C/C++,
-                        <br class="superficial"/>
-                        GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
-                        <br/><br/>
-                        I have worked on many projects which demonstrate my proficiency 
-                        in developing large systems,
-                        <br class="superficial"/>most notably a disassembler for the 
-                        MSP430 microcontroller, the implementation of various components
-                        <br/>
-                        of the Pintos educational operating system, and an encrypted file 
-                        system.
-                        <br/><br/>
-                        I am eager to begin my career developing embedded systems and put 
-                        the skills I have developed at
-                        <br class="superficial"/>
-                        UC Berkeley to work on production 
-                        systems.
-                    </div>
-                    <div id="socials">
-                        <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
-                            <img src="content/github-mark.svg" alt="github link" class="github-img"
-                                height="40px"/>
-                        </a>
-                        <a href="https://www.linkedin.com/in/baptistajaden/" target="_blank" class="social-link">
-                            <img src="content/LI-In-Bug.png" alt="linkedin link" class="linkedin-img"
-                                height="40px"/>
-                        </a>
-                    </div>
-                </section>
+            <div id="main-content">
+                 <!-- NO CONTENT HERE -->
             </div>
             <aside>
                 <div id="aside-header">
