make changes for project page layout

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                         <br/><br/>
                         I'm a recent EECS graduate from UC Berkeley
                         <br class="superficial"/>interested in developing firmware for embedded systems.
+                        <br/><br/>
+                        Contact: baptistajaden@gmail.com
                     </div>
                 </div>
                 <div id="summary">
@@ -57,7 +59,7 @@
                     <br class="superficial"/>
                     GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
                     <br/><br/>
-                    I have worked on many projects which demonstrate my proficiency 
+                    I have worked on many projects that demonstrate my proficiency 
                     in developing large systems,
                     <br class="superficial"/>most notably a disassembler for the 
                     MSP430 microcontroller, the implementation of various components
@@ -83,16 +85,16 @@
                 </div>
             </section>
         </div>
-        <div id="aside-grid">
-            <div id="main-content">
+        <div class="aside-grid">
+            <div class="main-content">
                  <!-- NO CONTENT HERE -->
             </div>
             <aside>
-                <div id="aside-header">
+                <div class="aside-header">
                     Recent Blog Posts
                 </div>
                 <div class="aside-content">
-                    THIS IS A BLOG POST!!!!
+                    No current blog posts.
                 </div>
             </aside>
         </div>
