--- a/projects.html
+++ b/projects.html
@@ -38,19 +38,20 @@
             <div id="nav-break"></div>
         </nav>
         <div id="nav-separator"></div>
-        <div id="projects">
-            <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
-            </section>
+        <div class="aside-grid">
+            <div class="main-content">
+                 <section style="height:500px">
+                    MSP430 Disassembler
+                 </section>
+            </div>
+            <aside>
+                <div class="aside-header">
+                    Recent Blog Posts
+                </div>
+                <div class="aside-content">
+                    No current blog posts.
+                </div>
+            </aside>
         </div>
     </body>
 
