--- a/resume.html
+++ b/resume.html
@@ -101,8 +101,11 @@
                     </div>
                 </div>
                 <br/>
-                <div class="resume-item">
-                    Award: Outstanding Computer Science Student, 2022.
+                <div class="resume-item-static">
+                    Award: 
+                    <a href="https://www.sbcc.edu/studentlife/outstanding-student-awards-2021-2022.php"
+                    target="_blank">
+                        Outstanding Computer Science Student</a>, 2022.
                 </div>
             </section>
             <section class="resume-container">
