Add project button

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
         <title>Jaden Baptista</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/projects.css" />
         <link rel="stylesheet" 
               href="styles/small-style.css" />
         <link rel="stylesheet"
@@ -12,7 +13,6 @@
               href="styles/smaller-style.css" />
         <link rel="stylesheet"
               href="styles/smallest-style.css" />
-        <link rel="stylesheet" href="styles/projects.css" />
     </head>
     <body>
         <nav>
@@ -40,9 +40,15 @@
         <div id="nav-separator"></div>
         <div class="aside-grid">
             <div class="main-content">
-                 <section style="height:500px">
-                    MSP430 Disassembler
-                 </section>
+                <a href="blog.html">
+                    <section id="msp-disassembler">
+                        <div class="project-title">
+                            MSP430 Disassembler
+                        </div>
+                        <img src="content/mspdisassembler.jpg"
+                            class="project-image"/>
+                     </section>
+                </a>          
             </div>
             <aside>
                 <div class="aside-header">
