complete rudimentary website

--- a/blog.html
+++ b/blog.html
@@ -38,18 +38,9 @@
             <div id="nav-break"></div>
         </nav>
         <div id="nav-separator"></div>
-        <div id="blog">
+        <div class="centered">
             <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
-            </section>
-            <section>
-                HELLO WORLD
+                There are currently no blog posts.
             </section>
         </div>
     </body>
