--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="nav-break"></div>
         </nav>
         <div id="nav-separator"></div>
-        <div id="about">
+        <div class="centered">
             <section id="introduction">
                 <div id="hello-container">
                     <img src="content/picture.jpg" alt="face image"
