--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         <div id="nav-separator"></div>
         <div class="aside-grid">
             <div class="main-content">
-                <a href="blog.html">
+                <a href="https://github.com/jdbaptista/MSP-Debugger" target="_blank">
                     <section id="msp-disassembler">
                         <div class="project-title">
                             MSP430 Disassembler
